# isle

./: .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Plan.md  Readme.md  SECURITY.md  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: ci.yml  release.yml
.opencode/skills/a11y-accessibility/: SKILL.md
.opencode/skills/animation-ux/: SKILL.md
.opencode/skills/code-review/: SKILL.md
.opencode/skills/commit-conventions/: SKILL.md
.opencode/skills/design-system/: SKILL.md
.opencode/skills/dev-workflow/: SKILL.md
.opencode/skills/documentation/: SKILL.md
.opencode/skills/form-ux/: SKILL.md
.opencode/skills/mobile-ux/: SKILL.md
apps/desktop/: README.md  package-lock.json  package.json  pnpm-lock.yaml  test_error.mjs  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.android.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
docs/: application-logic.md  architecture.md  ci-cd-pipeline.md  ci-cd-semantic.md  database-schema.md  mobile-search-plan.md  semantic-release.md  system-flow-architecture.md
infra/: .env.example  README.md  check.sh  docker-compose.yml  logs.txt  nginx.conf  seed.sql  success.html
infra/secrets/: .gitignore  README.md
isle/: index.html  package-lock.json  package.json
scripts/: run-semantic-release.mjs  sync-version.mjs
services/api/: Dockerfile  README.md  pom.xml
(+186 files in other folders)
