[package]
name = "isle"
version = "0.1.0"
edition = "2021"

[lib]
name = "isle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                     = { version = "2", features = [] }
tauri-plugin-store        = "2"
tauri-plugin-deep-link    = "2"
tauri-plugin-shell        = "2"
tauri-plugin-stronghold   = "2"
tauri-plugin-notification = "2"          # plan fix #13
serde                     = { version = "1", features = ["derive"] }
serde_json                = "1"
argon2                    = "0.5"
machine-uid               = "0.5"
uuid                      = { version = "1", features = ["v4"] }   # plan fix #12
