[package]
name = "isle"
version = "0.1.0"
edition = "2021"

[lib]
name = "isle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                     = { version = "2", features = [] }
tauri-plugin-store        = "2"
tauri-plugin-deep-link    = "2"
tauri-plugin-shell        = "2"
tauri-plugin-notification = "2"          # plan fix #13
serde                     = { version = "1", features = ["derive"] }
serde_json                = "1"
uuid                      = { version = "1", features = ["v4"] }   # plan fix #12
url                       = "2"

[target.'cfg(not(target_os = "android"))'.dependencies]
machine-uid               = "0.5"
tiny_http                 = "0.12"
tauri-plugin-stronghold   = "2"
argon2                    = "0.5"
